--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: dpide
   datasource:
-    url: jdbc:h2:tcp://h2:1521/dpide
+    url: jdbc:h2:tcp://db:1521/dpide
     driver-class-name: org.h2.Driver
     username: sa
     password:
@@ -11,9 +11,14 @@ spring:
       enabled: true
       path: /h2-console
   jpa:
-    hibernate.ddl-auto: create-drop
-    show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate.ddl-auto: create
     properties:
       hibernate:
-        format_sql: true
         dialect: org.hibernate.dialect.H2Dialect
+        show-sql: true
+        format_sql: true
+
+logging:
+  level:
+    org.hibernate.SQL: debug
