--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   application:
     container_name: dpide
@@ -13,26 +12,25 @@ services:
       - 8080:8080
 
     environment:
-      SPRING_DATASOURCE_URL: jdbc:h2:tcp://h2:1521/dpide
+      SPRING_DATASOURCE_URL: jdbc:h2:mem:dpide
       SPRING_DATASOURCE_USERNAME: sa
       SPRING_DATASOURCE_PASSWORD:
 
-    depends_on:
-      - db
-
-  db:
-    container_name: h2
-    image: oscarfonts/h2:latest
-    platform: linux/amd64
-
+  h2:
+    container_name: h2db
+    image: oscarfonts/h2
+    environment:
+      - H2_OPTIONS=-webAllowOthers -tcpAllowOthers -ifNotExists
     ports:
       - 1521:1521
       - 8081:81
 
-    environment:
-      - H2_OPTIONS=-ifNotExists -webAllowOthers -tcpAllowOthers
-
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    ports:
+      - 80:80
     volumes:
-      - ./h2/:/opt/h2-data
-
-    restart: always
+      - ./nginx/conf.d/app.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - application
