--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,18 @@
 spring:
   application:
     name: dpide
+
   datasource:
-    url: jdbc:h2:tcp://db:1521/dpide
+    url: jdbc:h2:mem:dpide
     driver-class-name: org.h2.Driver
     username: sa
     password:
+
   h2:
     console:
       enabled: true
       path: /h2-console
+
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate.ddl-auto: create
