--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -1,9 +1,9 @@
 server {
     listen 80;
-    server_name 3.38.178.158;
+    server_name 43.202.198.185;
 
     location / {
-        proxy_pass http://application:8080;  # Spring Boot 서버로 요청 전달
+        proxy_pass http://application:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -16,6 +16,6 @@ server {
     add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
 
     location /h2-console {
-        proxy_pass http://application:8081;  # H2 콘솔 요청 전달
+        proxy_pass http://application:8081;
     }
 }
