--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,31 @@
 spring:
   application:
     name: dpide
+
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:mem:dpide
     driver-class-name: org.h2.Driver
     username: sa
     password:
+
   h2:
     console:
       enabled: true
       path: /h2-console
+
   jpa:
-    hibernate.ddl-auto: create-drop
-    show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate.ddl-auto: create
     properties:
       hibernate:
-        format_sql: true
         dialect: org.hibernate.dialect.H2Dialect
+        show-sql: true
+        format_sql: true
+
+logging:
+  level:
+    org.hibernate.SQL: debug
+
 jwt:
   issuer: dpide
   secret_key: test-version-serect-keyjejsndskadlwkmkaslckjaskldasadjkajwkhajkhk
