--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,8 +13,11 @@ spring:
       enabled: true
       path: /h2-console
 
+  sql.init.mode: always
+
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
+    defer-datasource-initialization: true
     hibernate.ddl-auto: create
     properties:
       hibernate:
