--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -3,6 +3,17 @@ server {
     server_name 43.202.198.185;
 
     location / {
+        if ($request_method = 'OPTIONS') {
+                    add_header 'Access-Control-Allow-Origin' '*';
+                    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+                    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
+                    add_header 'Access-Control-Expose-Headers' 'Authorization, Refresh-Token' always;
+                    add_header 'Access-Control-Max-Age' 1728000;
+                    add_header 'Content-Length' 0;
+                    add_header 'Content-Type' 'text/plain charset=UTF-8';
+                    return 204;  # Preflight 요청은 204로 응답
+        }
+
         proxy_pass http://application:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -14,6 +25,7 @@ server {
     add_header 'Access-Control-Allow-Origin' '*' always;
     add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
     add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+    add_header 'Access-Control-Expose-Headers' 'Authorization, Refresh-Token' always;
 
     location /h2-console {
         proxy_pass http://application:8081;
