--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -6,7 +6,7 @@ server {
         if ($request_method = 'OPTIONS') {
                     add_header 'Access-Control-Allow-Origin' '*';
                     add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-                    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
+                    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Refresh-Token';
                     add_header 'Access-Control-Expose-Headers' 'Authorization, Refresh-Token' always;
                     add_header 'Access-Control-Max-Age' 1728000;
                     add_header 'Content-Length' 0;
@@ -24,7 +24,7 @@ server {
     # CORS 설정
     add_header 'Access-Control-Allow-Origin' '*' always;
     add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Refresh-Token' always;
     add_header 'Access-Control-Expose-Headers' 'Authorization, Refresh-Token' always;
 
     location /h2-console {
