Feat: health check contoller 생성

--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 3.37.240.201;
+    server_name dpide.site www.dpide.site;
 
     location / {
         if ($request_method = 'OPTIONS') {
