--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,25 +2,22 @@ spring:
   application:
     name: dpide
 
-  # TODO: db를 mysql로 변경하기
   datasource:
-    url: jdbc:h2:mem:dpide
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
+    url: jdbc:mysql://mysql:3306/dpide_db
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: 1234
 
   h2:
     console:
-      enabled: true
-      path: /h2-console
+      enabled: false
 
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
     hibernate.ddl-auto: create
+    show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
-        show-sql: true
+        dialect: org.hibernate.dialect.MySQL8Dialect
         format_sql: true
 
 logging:
