Chore: 운영환경 설정 1차 완료

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -28,7 +28,12 @@ services:
     ports:
       - 3306:3306
     volumes:
-      - mysql_data:/var/lib/mysql
+      - /home/ubuntu/mysql_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
   nginx:
     image: nginx:latest
