--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,13 +9,13 @@ spring:
     password: 1234
 
   jpa:
-    hibernate.ddl-auto: update
+    hibernate.ddl-auto: validate
     show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
-    open-in-view: false
+    open-in-view: true
 
 logging:
   level:
